--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
   height: 80px;
 }
 
+header h1 {
+  font-size: 3.5em;
+  font-weight: 1200;
+  text-align: center;
+  padding: 0.5rem 0;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
