Added more styling to Home Page and added coder profiles on page

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,14 @@
 #logo{
     text-align: center;
     background-color: #2b2d42;
+    margin: 0px;
+    padding: 0px;
 }
 #root{
     background-color: #d5bdaf;
+}
+#developer-cards{
+    margin: 10px;
 }
 .Card {
     list-style: none;
